# MMCIF_SITEGEN HISTORY
11-Mar-2018  V0.10 - Py2->Py3 and refactored for python packaging tools
29-Dec-2020  V0.20 - Refactor for new website deployment, Py39, & Azure pipelines
30-Dec-2020  V0.21 - Added workflow, cli and related tests
31-Dec-2020  V0.22 - Avoid directory purge on image generation